# sedot-cli

./: README.md  pyproject.toml  sedot.rb  setup.cfg
sedot/: cli.py  downloader.py  fetchers.py
sedot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
