[metadata]
name = sedot
version = 0.1.0
description = CLI video scrapper for Instagram posts/reels and Threads.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typer>=0.9
    requests>=2.31
    beautifulsoup4>=4.12
    rich>=13.7

[options.entry_points]
console_scripts =
    sedot = sedot.cli:run
